--- a/newstuff.html
+++ b/newstuff.html
@@ -290,91 +290,91 @@
 
               <div class="row portfolio-container" data-aos="fade-up">
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/phpS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>PHP</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/csharpS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>C#</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/jqueryS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>JQuery</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/javascriptS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Javascript</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/html5S.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>HTML</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/piS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Raspberry Pi</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/awsS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Amazon Web Services</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/wordpressS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Wordpress</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/cssS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>CSS</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/reactS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>React</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/nodejsS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Node JS</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-lang">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-lang">
                       <img src="https://www.williambreindel.com/logos/angularS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Angular</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/bootstrapS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Bootstrap</h4>
@@ -383,7 +383,7 @@
 
 
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/chromeS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Chrome Dev Tools</h4>
@@ -392,7 +392,7 @@
 
 
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/mysqlS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>MYSQL</h4>
@@ -402,55 +402,62 @@
 
 
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/jsonS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>JSON</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/xmlS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>XML</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/visualstudioS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Visual Studio</h4>
                       </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/vscodeS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Visual Studio Code</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/apacheS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Apache</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
+                      <img src="https://www.williambreindel.com/logos/ubuntuS.png" class="img-fluid" alt="">
+                      <div class="portfolio-info">
+                          <h4>Ubuntu</h4>
+                      </div>
+                  </div>
+
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/linuxS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Linux</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-tech">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-tech">
                       <img src="https://www.williambreindel.com/logos/laravelS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>Laravel</h4>
                       </div>
                   </div>
 
-                  <div class="col-lg-3 col-md-6 portfolio-item filter-add">
+                  <div class="col-lg-3 col-md-4 portfolio-item filter-add">
                       <img src="https://www.williambreindel.com/logos/sqliteS.png" class="img-fluid" alt="">
                       <div class="portfolio-info">
                           <h4>SQLite</h4>
