--- a/newstuff.html
+++ b/newstuff.html
@@ -156,7 +156,7 @@
                           I've been lucky to have a career that I'm passionate about for the last fifteen years,
                           working for a company that creates and sells lasertag hardware and software all over the world.
                           I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship
-                          with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites,
+                          with clients and my love of the game to create fun, interactive user experiences. <p><p>I build and maintain websites,
                           databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North
                           Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably
                           Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.
@@ -166,7 +166,7 @@
 
           </div>
       </section><!-- End About Us Section -->
-      <h4 id="scrollspyHeading3">Services</h4>
+
       <!-- ======= Services Section ======= -->
       <section id="services" class="services section-bg">
           <div class="container" data-aos="fade-up">
@@ -268,7 +268,7 @@
 
 
 
-      <h4 id="scrollspyHeading4">Fourth heading</h4>
+   
       <!-- ======= Portfolio Section ======= -->
       <section id="portfolio" class="portfolio">
           <div class="container">
