--- a/newstuff.html
+++ b/newstuff.html
@@ -139,7 +139,7 @@
           </div>
       </section><!-- End Slider -->
       <!-- ======= About Me Section ======= -->
-      <h4 id="scrollspyHeading2">About</h4>
+      <h4 id="scrollspyHeading2"></h4>
       <section id="about-me" class="about-me">
           <div class="container" data-aos="fade-up">
               <div class="section-title">
@@ -156,18 +156,19 @@
                           I've been lucky to have a career that I'm passionate about for the last fifteen years,
                           working for a company that creates and sells lasertag hardware and software all over the world.
                           I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship
-                          with clients and my love of the game to create fun, interactive user experiences. <p><p>I build and maintain websites,
-                          databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North
-                          Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably
-                          Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.
+                          with clients and my love of the game to create fun, interactive user experiences. <p><p>
+                              I build and maintain websites,
+                              databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North
+                              Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably
+                              Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.
                       </h5>
                   </div>
               </div>
 
           </div>
       </section><!-- End About Us Section -->
-
-      <!-- ======= Services Section ======= -->
+      <h4 id="scrollspyHeading3"></h4>
+      <!-- ======= Portfolio Section ======= -->
       <section id="services" class="services section-bg">
           <div class="container" data-aos="fade-up">
 
@@ -192,84 +193,80 @@
                       </div>
                   </div>
 
-                  
-                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                          <div class="icon-box iconbox-blue">
-                              <div class="icon">
-                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  </svg>
-                                  <span style=" background:url('phpL.png');"></span>
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                      <div class="icon-box iconbox-blue">
+                          <div class="icon">
+                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  <i class="bx bxl-dribbble"></i>
-                              </div>
-                              <h4><a href="">Lorem Ipsum</a></h4>
-                              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                              </svg>
+                              <span style=" background:url('phpL.png');"></span>
+
+                              <i class="bx bxl-dribbble"></i>
                           </div>
+                          <h4><a href="">Lorem Ipsum</a></h4>
+                          <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                       </div>
+                  </div>
 
-                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                          <div class="icon-box iconbox-pink">
-                              <div class="icon">
-                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                      <div class="icon-box iconbox-pink">
+                          <div class="icon">
+                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  </svg>
-                                  <i class="bx bx-tachometer"></i>
-                              </div>
-                              <h4><a href="">Magni Dolores</a></h4>
-                              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                              </svg>
+                              <i class="bx bx-tachometer"></i>
                           </div>
+                          <h4><a href="">Magni Dolores</a></h4>
+                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                       </div>
+                  </div>
 
-                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-                          <div class="icon-box iconbox-yellow">
-                              <div class="icon">
-                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                      <div class="icon-box iconbox-yellow">
+                          <div class="icon">
+                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  </svg>
-                                  <i class="bx bx-layer"></i>
-                              </div>
-                              <h4><a href="">Nemo Enim</a></h4>
-                              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                              </svg>
+                              <i class="bx bx-layer"></i>
                           </div>
+                          <h4><a href="">Nemo Enim</a></h4>
+                          <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                       </div>
+                  </div>
 
-                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                          <div class="icon-box iconbox-red">
-                              <div class="icon">
-                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                      <div class="icon-box iconbox-red">
+                          <div class="icon">
+                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  </svg>
-                                  <i class="bx bx-slideshow"></i>
-                              </div>
-                              <h4><a href="">Dele Cardo</a></h4>
-                              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                              </svg>
+                              <i class="bx bx-slideshow"></i>
                           </div>
+                          <h4><a href="">Dele Cardo</a></h4>
+                          <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
                       </div>
+                  </div>
 
-                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-                          <div class="icon-box iconbox-teal">
-                              <div class="icon">
-                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                      <div class="icon-box iconbox-teal">
+                          <div class="icon">
+                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                                  </svg>
-                                  <i class="bx bx-arch"></i>
-                              </div>
-                              <h4><a href="">Divera Don</a></h4>
-                              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                              </svg>
+                              <i class="bx bx-arch"></i>
                           </div>
+                          <h4><a href="">Divera Don</a></h4>
+                          <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
                       </div>
-
                   </div>
 
               </div>
+
+          </div>
       </section><!-- End Services Section -->
-
-
-
-
-   
-      <!-- ======= Portfolio Section ======= -->
+      <!-- ======= Skills Section ======= -->
+      <h4 id="scrollspyHeading4"></h4>
       <section id="portfolio" class="portfolio">
           <div class="container">
 
@@ -521,38 +518,38 @@
 
 
           </div>
-          </section>
+      </section>
 
 
 
-              <!-- ======= Footer ======= -->
-              <footer id="footer">
-                  <div id="mainPageFoot">
-                      <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-                      <a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
-                  </div>
-              </footer><!-- End Footer -->
-              <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+      <!-- ======= Footer ======= -->
+      <footer id="footer">
+          <div id="mainPageFoot">
+              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
+              <a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
+          </div>
+      </footer><!-- End Footer -->
+      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
 
 
 
 
-              <!-- Vendor JS Files -->
-              <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
-              <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
-              <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
-              <script src="https://www.williambreindel.com/js/validate.js"></script>
-              <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
-              <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
-              <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
-              <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
-              <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
-              <script src="https://www.williambreindel.com/js/aos.js"></script>
+      <!-- Vendor JS Files -->
+      <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
+      <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
+      <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
+      <script src="https://www.williambreindel.com/js/validate.js"></script>
+      <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
+      <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
+      <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
+      <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
+      <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
+      <script src="https://www.williambreindel.com/js/aos.js"></script>
 
-              <!-- Template Main JS File -->
-              <script src="https://www.williambreindel.com/js/main.js"></script>
+      <!-- Template Main JS File -->
+      <script src="https://www.williambreindel.com/js/main.js"></script>
 
 </body>
 </html>
