--- a/newstuff.html
+++ b/newstuff.html
@@ -3,16 +3,8 @@
 
 <html>
 <head>
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-          <!-- <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/animate.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/owl.carousel.min.css" />
-        <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
-    <link href="https://www.williambreindel.com/favicon.png" rel="icon">
-    <link href="https://www.williambreindel.com/apple-touch-icon.png" rel="apple-touch-icon">
+    <title>WilliamBreindel.com</title>
+
 
 
     <!-- Google Fonts -->
@@ -20,8 +12,6 @@
 
     <!-- Vendor CSS Files -->
     <link href="https://www.williambreindel.com/css/bootstrap.min.css" rel="stylesheet">
-    <!--  <link href="https://www.williambreindel.com/css/icofont.min.css" rel="stylesheet">-->
-    <!--  <link href="https://www.williambreindel.com/css/boxicons.min.css" rel="stylesheet">-->
     <link href="https://www.williambreindel.com/css/animate.min.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/venobox.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/owl.carousel.min.css" rel="stylesheet">
