--- a/newstuff.html
+++ b/newstuff.html
@@ -143,7 +143,7 @@
                   </div>
                   <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
                       <h5 id="section2Bio">
-                          <div>
+                          <div id="section2BioDiv">
                                   I've been lucky to have a career that I'm passionate about for the last fifteen years,
                                   working for a company that creates and sells lasertag hardware and software all over the world.
                                   I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship
