--- a/newstuff.html
+++ b/newstuff.html
@@ -76,7 +76,7 @@
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>About <span>William</span></h2>
-                              <p>Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</p>
+                              <p>Hi, I'm William Breindel. My friends call me Bill.  I'm a full-stack software developer in Buffalo, NY.</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading2" class="btn-get-started">Read More</a>
                               </div>
@@ -90,7 +90,7 @@
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Skills</h2>
-                              <p> The skills William brings to the table</p>
+                              <p> The skills I bring to the table</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading3" class="btn-get-started">Read More</a>
                               </div>
@@ -103,8 +103,8 @@
                       <div class="carousel-container">
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
-                              <h2>Contact William</h2>
-                              <p>Contact william for more information and to reach out.</p>
+                              <h2>Contact</h2>
+                              <p>Contact me for more information and to reach out.</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading5" class="btn-get-started">Read More</a>
                               </div>
