--- a/newstuff.html
+++ b/newstuff.html
@@ -89,8 +89,8 @@
                       <div class="carousel-container">
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
-                              <h2>Skills</h2>
-                              <p> The skills I bring to the table</p>
+                              <h2>Portfolio</h2>
+                              <p>Check out some examples of my past work</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading3" class="btn-get-started">Read More</a>
                               </div>
@@ -103,8 +103,22 @@
                       <div class="carousel-container">
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
+                              <h2>Skills</h2>
+                              <p>Here are some of the technologies and languages in which i'm fluent.</p>
+                              <div class="text-center">
+                                  <a href="#scrollspyHeading3" class="btn-get-started">Read More</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <!-- Slide 4 -->
+                  <div id="slide4" class="carousel-item">
+                      <div class="carousel-container">
+
+                          <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Contact</h2>
-                              <p>Contact me for more information and to reach out.</p>
+                              <p>If you'd like to get in touch, you can fill out the contact form below.  I'd love to hear from you!</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading5" class="btn-get-started">Read More</a>
                               </div>
