--- a/newstuff.html
+++ b/newstuff.html
@@ -195,7 +195,7 @@
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
-                          <h4><a href="">Lorem Ipsum</a></h4>
+                          <h4><a href="">Tech Portal</a></h4>
                           <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                       </div>
                   </div>
@@ -211,7 +211,7 @@
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
-                          <h4><a href="">Lorem Ipsum</a></h4>
+                          <h4><a href="">Cloud Reservation System</a></h4>
                           <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                       </div>
                   </div>
@@ -224,7 +224,7 @@
                               </svg>
                               <i class="bx bx-tachometer"></i>
                           </div>
-                          <h4><a href="">Magni Dolores</a></h4>
+                          <h4><a href="">Ticketing System</a></h4>
                           <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                       </div>
                   </div>
@@ -237,7 +237,7 @@
                               </svg>
                               <i class="bx bx-layer"></i>
                           </div>
-                          <h4><a href="">Nemo Enim</a></h4>
+                          <h4><a href="">Wordpress Business Site</a></h4>
                           <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                       </div>
                   </div>
@@ -250,7 +250,7 @@
                               </svg>
                               <i class="bx bx-slideshow"></i>
                           </div>
-                          <h4><a href="">Dele Cardo</a></h4>
+                          <h4><a href="">Bookkeeping Application</a></h4>
                           <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
                       </div>
                   </div>
