--- a/newstuff.html
+++ b/newstuff.html
@@ -181,7 +181,7 @@
 
               <div class="section-title">
                   <h2><strong>Portfolio</strong></h2>
-                  <p>Laborum repudiandae omnis voluptatum consequatur mollitia ea est voluptas ut</p>
+                  <p></p>
               </div>
 
               <div class="row">
@@ -191,12 +191,12 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('phpL.png');"></span>
+                              <span style=" background:url('/icons/techsite.png');"></span>
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
                           <h4><a href="">Tech Portal</a></h4>
-                          <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                          <p></p>
                       </div>
                   </div>
 
@@ -207,12 +207,12 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('phpL.png');"></span>
+                              <span style=" background:url('/icons/cloud.png');"></span>
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
                           <h4><a href="">Cloud Reservation System</a></h4>
-                          <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                          <p></p>
                       </div>
                   </div>
 
@@ -222,10 +222,12 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
+                              <span style=" background:url('/icons/ticketing.png');"></span>
+
                               <i class="bx bx-tachometer"></i>
                           </div>
                           <h4><a href="">Ticketing System</a></h4>
-                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                          <p></p>
                       </div>
                   </div>
                   
@@ -235,10 +237,11 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
+                              <span style=" background:url('/icons/wordpress.png');"></span>
                               <i class="bx bx-layer"></i>
                           </div>
                           <h4><a href="">Wordpress Business Site</a></h4>
-                          <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                          <p></p>
                       </div>
                   </div>
 
@@ -248,10 +251,11 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
+                              <span style=" background:url('/icons/bookkeeping.png');"></span>
                               <i class="bx bx-slideshow"></i>
                           </div>
                           <h4><a href="">Bookkeeping Application</a></h4>
-                          <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                          <p></p>
                       </div>
                   </div>
 
@@ -522,7 +526,7 @@
       <footer id="footer">
           <div id="mainPageFoot">
               <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
+              <a target="_blank" href="https://icons8.com/icon/SROvvC91x7DL/analytics"  id="footFYI">Analytics</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
           </div>
       </footer><!-- End Footer -->
       <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
