--- a/newstuff.html
+++ b/newstuff.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-    <title>WilliamBreindel.com</title>
+    <title>William Breindel</title>
 
 
 
@@ -191,7 +191,7 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('/icons/techsite.png');"></span>
+                              <span style=" background:url('/logos/techsite.png');"></span>
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
@@ -207,7 +207,7 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('/icons/cloud.png');"></span>
+                              <span style=" background:url('/logos/cloud.png');"></span>
 
                               <i class="bx bxl-dribbble"></i>
                           </div>
@@ -222,7 +222,7 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('/icons/ticketing.png');"></span>
+                              <span style=" background:url('/logos/ticketing.png');"></span>
 
                               <i class="bx bx-tachometer"></i>
                           </div>
@@ -237,7 +237,7 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('/icons/wordpress.png');"></span>
+                              <span style=" background:url('/logos/wordpress.png');"></span>
                               <i class="bx bx-layer"></i>
                           </div>
                           <h4><a href="">Wordpress Business Site</a></h4>
@@ -251,7 +251,7 @@
                               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
                               </svg>
-                              <span style=" background:url('/icons/bookkeeping.png');"></span>
+                              <span style=" background:url('/logos/bookkeeping.png');"></span>
                               <i class="bx bx-slideshow"></i>
                           </div>
                           <h4><a href="">Bookkeeping Application</a></h4>
