--- a/newstuff.html
+++ b/newstuff.html
@@ -187,13 +187,7 @@
               <div class="row">
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="icon-box iconbox-blue">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-
-                              </svg>
-                              <span style=" background:url('/logos/techsite.png');"></span>
-
-                              <i class="bx bxl-dribbble"></i>
+                          <div class="icon" id="port1">
                           </div>
                           <h4><a href="">Tech Portal</a></h4>
                           <p></p>
@@ -203,13 +197,7 @@
 
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="icon-box iconbox-blue">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-
-                              </svg>
-                              <span style=" background:url('/logos/cloud.png');"></span>
-
-                              <i class="bx bxl-dribbble"></i>
+                          <div class="icon" id="port2">
                           </div>
                           <h4><a href="">Cloud Reservation System</a></h4>
                           <p></p>
@@ -218,13 +206,7 @@
 
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                       <div class="icon-box iconbox-pink">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-
-                              </svg>
-                              <span style=" background:url('/logos/ticketing.png');"></span>
-
-                              <i class="bx bx-tachometer"></i>
+                          <div class="icon" id="port3">
                           </div>
                           <h4><a href="">Ticketing System</a></h4>
                           <p></p>
@@ -233,12 +215,7 @@
                   
                   <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                       <div class="icon-box iconbox-yellow">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-
-                              </svg>
-                              <span style=" background:url('/logos/wordpress.png');"></span>
-                              <i class="bx bx-layer"></i>
+                          <div class="icon" id="port4">
                           </div>
                           <h4><a href="">Wordpress Business Site</a></h4>
                           <p></p>
@@ -247,12 +224,7 @@
 
                   <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                       <div class="icon-box iconbox-red">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-
-                              </svg>
-                              <span style=" background:url('/logos/bookkeeping.png');"></span>
-                              <i class="bx bx-slideshow"></i>
+                          <div class="icon" id="port5">
                           </div>
                           <h4><a href="">Bookkeeping Application</a></h4>
                           <p></p>
@@ -526,7 +498,7 @@
       <footer id="footer">
           <div id="mainPageFoot">
               <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <a target="_blank" href="https://icons8.com/icon/SROvvC91x7DL/analytics"  id="footFYI">Analytics</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
           </div>
       </footer><!-- End Footer -->
       <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
