--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                       <div class="icon-box iconbox-blue">
                           <div class="icon" id="port1">
                           </div>
-                          <h4><a href="">Tech Portal</a></h4>
+                          <h4><a href="/techportal.html">Tech Portal</a></h4>
                           <p></p>
                       </div>
                   </div>
@@ -199,7 +199,7 @@
                       <div class="icon-box iconbox-blue">
                           <div class="icon" id="port2">
                           </div>
-                          <h4><a href="">Cloud Reservation System</a></h4>
+                          <h4><a href="/cloudreservation.html">Cloud Reservation System</a></h4>
                           <p></p>
                       </div>
                   </div>
@@ -208,7 +208,7 @@
                       <div class="icon-box iconbox-pink">
                           <div class="icon" id="port3">
                           </div>
-                          <h4><a href="">Ticketing System</a></h4>
+                          <h4><a href="/ticketing.html">Ticketing System</a></h4>
                           <p></p>
                       </div>
                   </div>
@@ -217,7 +217,7 @@
                       <div class="icon-box iconbox-yellow">
                           <div class="icon" id="port4">
                           </div>
-                          <h4><a href="">Wordpress Business Site</a></h4>
+                          <h4><a href="/wordpress.html">Wordpress Business Site</a></h4>
                           <p></p>
                       </div>
                   </div>
@@ -226,7 +226,7 @@
                       <div class="icon-box iconbox-red">
                           <div class="icon" id="port5">
                           </div>
-                          <h4><a href="">Bookkeeping Application</a></h4>
+                          <h4><a href="bookkeeping.html">Bookkeeping Application</a></h4>
                           <p></p>
                       </div>
                   </div>
