--- a/techportal.html
+++ b/techportal.html
@@ -51,19 +51,21 @@
 
 	
 
-    <h2>Tech Portal</h2>
+    <h2 id="sampleHead">Tech Portal</h2>
 
-    <p>The main purpose of the Tech Portal is to allow customers to place parts orders, and to track the complete order process from submission through invoicing. 
-    The site also provides customer relationship management functionality, allowing employees to track customer data and sales history. </p>
+    <div id="sampleWordDiv">
+        <p>The main purpose of the Tech Portal is to allow customers to place parts orders, and to track the complete order process from submission through invoicing. 
+        The site also provides customer relationship management functionality, allowing employees to track customer data and sales history. </p>
 
-    <p>The Tech Portal is built with PHP and a MySQL database. Pictured below is the admin overview page, 
-    which incorporates user preference settings to determine what data is displayed upon page load. </p>
+        <p>The Tech Portal is built with PHP and a MySQL database. Pictured below is the admin overview page, 
+        which incorporates user preference settings to determine what data is displayed upon page load. </p>
 
-    <p>The code looks at those preferences and then performs a foreach loop with an if statement to determine the styling
-    of each line before rendering it. Each line represents a current order. When clicked, a div is displayed above the 
-    table showing a view-only summary of the order. The view order link brings the user to a separate page where they can interact 
-    with it by adding, deleting, printing order information or fulfilling the order. Fulfilling an order generates an e-mail to 
-    the user and saves the data to the database.</p>
+        <p>The code looks at those preferences and then performs a foreach loop with an if statement to determine the styling
+        of each line before rendering it. Each line represents a current order. When clicked, a div is displayed above the 
+        table showing a view-only summary of the order. The view order link brings the user to a separate page where they can interact 
+        with it by adding, deleting, printing order information or fulfilling the order. Fulfilling an order generates an e-mail to 
+        the user and saves the data to the database.</p>
+    </div>
 
 
 
