--- a/techportal.html
+++ b/techportal.html
@@ -29,42 +29,54 @@
 </head>
 <body data-spy="scroll" style="position: relative;">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-  <!--   <div class="container d-flex align-items-center">
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <!--   <div class="container d-flex align-items-center">
 
-    <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-       Uncomment below if you prefer to use an image logo 
- <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+           <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
+              Uncomment below if you prefer to use an image logo
+        <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+        <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+            <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+            </ul>
+        </nav><!-- .nav-menu -->
 
 
-    
-  </header><!-- End Header -->
 
-	
+    </header><!-- End Header -->
 
-    <h2 id="sampleHead">Tech Portal</h2>
+    <div class="section-title sampleHead">
+        <h2><strong>TECH PORTAL</strong></h2>
+    </div>
+
 
     <div id="sampleWordDiv">
-        <p>The main purpose of the Tech Portal is to allow customers to place parts orders, and to track the complete order process from submission through invoicing. 
-        The site also provides customer relationship management functionality, allowing employees to track customer data and sales history. </p>
+        <p>
+            The main purpose of the Tech Portal is to allow customers to place parts orders, and to track the complete order process from submission through invoicing.
+            The site also provides customer relationship management functionality, allowing employees to track customer data and sales history.
+        </p>
 
-        <p>The Tech Portal is built with PHP and a MySQL database. Pictured below is the admin overview page, 
-        which incorporates user preference settings to determine what data is displayed upon page load. </p>
+        <p>
+            The Tech Portal is built with PHP and a MySQL database. Pictured below is the admin overview page,
+            which incorporates user preference settings to determine what data is displayed upon page load.
+        </p>
 
-        <p>The code looks at those preferences and then performs a foreach loop with an if statement to determine the styling
-        of each line before rendering it. Each line represents a current order. When clicked, a div is displayed above the 
-        table showing a view-only summary of the order. The view order link brings the user to a separate page where they can interact 
-        with it by adding, deleting, printing order information or fulfilling the order. Fulfilling an order generates an e-mail to 
-        the user and saves the data to the database.</p>
+        <p>
+            The code looks at those preferences and then performs a foreach loop with an if statement to determine the styling
+            of each line before rendering it. Each line represents a current order. When clicked, a div is displayed above the
+            table showing a view-only summary of the order. The view order link brings the user to a separate page where they can interact
+            with it by adding, deleting, printing order information or fulfilling the order. Fulfilling an order generates an e-mail to
+            the user and saves the data to the database.
+        </p>
+    </div>
+
+
+    <div class="samplePicDiv">
+        <img id="techPortalPic1" src="/images/techportal1.png" alt="Tech Portal">
     </div>
 
 
@@ -73,37 +85,34 @@
 
 
 
-
-	
-
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-          <div id="mainPageFoot">
-              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
-          </div>
-      </footer><!-- End Footer -->
-      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div id="mainPageFoot">
+            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
+            <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+        </div>
+    </footer><!-- End Footer -->
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
 
 
 
 
-      <!-- Vendor JS Files -->
-      <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
-      <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
-      <script src="https://www.williambreindel.com/js/validate.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
-      <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
-      <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
-      <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
-      <script src="https://www.williambreindel.com/js/aos.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
+    <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
+    <script src="https://www.williambreindel.com/js/validate.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
+    <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
+    <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
+    <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
+    <script src="https://www.williambreindel.com/js/aos.js"></script>
 
-      <!-- Template Main JS File -->
-      <script src="https://www.williambreindel.com/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="https://www.williambreindel.com/js/main.js"></script>
 
 </body>
 </html>
