--- a/cloudreservation.html
+++ b/cloudreservation.html
@@ -54,7 +54,7 @@
         <h2><strong>CLOUD RESERVATION SYSTEM FOR LASERTAG FACILITIES</strong></h2>
     </div>
 
-    <div id="sampleWordDiv">
+    <div class="sampleWordDiv">
         <p>
             This client-facing site is a reservation system used by client lasertag facilities to sign customers in.
             It utilizes a USB mag stripe reader to read the ID number of a player card swiped upon arrival.
