--- a/techportal.html
+++ b/techportal.html
@@ -54,7 +54,7 @@
     </div>
 
 
-    <div id="sampleWordDiv">
+    <div class="sampleWordDiv">
         <p>
             The main purpose of the Tech Portal is to allow customers to place parts orders, and to track the complete order process from submission through invoicing.
             The site also provides customer relationship management functionality, allowing employees to track customer data and sales history.
