--- a/ticketing.html
+++ b/ticketing.html
@@ -50,7 +50,7 @@
     </header><!-- End Header -->
 
     <div class="section-title sampleHead">
-        <h2><strong>TICKETING SYSTEML</strong></h2>
+        <h2><strong>TICKETING SYSTEM</strong></h2>
     </div>
 
 
