--- a/wordpress.html
+++ b/wordpress.html
@@ -29,37 +29,39 @@
 </head>
 <body data-spy="scroll" style="position: relative;">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-  <!--   <div class="container d-flex align-items-center">
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <!--   <div class="container d-flex align-items-center">
 
-    <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-       Uncomment below if you prefer to use an image logo 
- <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+           <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
+              Uncomment below if you prefer to use an image logo
+        <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+        <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+            <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></h1>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+            </ul>
+        </nav><!-- .nav-menu -->
 
 
-    
-  </header><!-- End Header -->
 
-	
+    </header><!-- End Header -->
 
-    <h2 id="sampleHead">Wordpress Business Site</h2>
+    <div class="section-title sampleHead">
+        <h2><strong>WORDPRESS BUSINESS SITE</strong></h2>
+    </div>
     <h4><a href="https://www.farmhouseonthepond.com/">https://www.farmhouseonthepond.com/</a></h4>
 
     <div id="sampleWordDiv">
         <p>This is a Wordpress site that I built to support my wife’s business. Last year, she began selling baked goods at a farmers market as well as through direct customer orders. </p>
 
-        <p>The checkout page contains a significant amount of custom Javascript and Jquery, including functionality that checks zip code in order to determine if delivery is available for 
-        a specific customer location. Additionally, I completely rebuilt a Wordpress add-on to allow the use of two different calendars with separate lookup functionality and settings 
-        for order pickup and order delivery.  </p>
+        <p>
+            The checkout page contains a significant amount of custom Javascript and Jquery, including functionality that checks zip code in order to determine if delivery is available for
+            a specific customer location. Additionally, I completely rebuilt a Wordpress add-on to allow the use of two different calendars with separate lookup functionality and settings
+            for order pickup and order delivery.
+        </p>
 
     </div>
 
@@ -70,36 +72,36 @@
 
 
 
-	
-
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-          <div id="mainPageFoot">
-              <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
-              <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
-          </div>
-      </footer><!-- End Footer -->
-      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div id="mainPageFoot">
+            <a href="https://www.williambreindel.com/" id="footCopyright">Copyright 2020 -  William Breindel </a>
+            <span>Icons courtesy <a target="_blank" href="https://icons8.com">Icons8</a></span>
+        </div>
+    </footer><!-- End Footer -->
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
 
 
-      <!-- Vendor JS Files -->
-      <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
-      <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
-      <script src="https://www.williambreindel.com/js/validate.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
-      <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
-      <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
-      <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
-      <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
-      <script src="https://www.williambreindel.com/js/aos.js"></script>
 
-      <!-- Template Main JS File -->
-      <script src="https://www.williambreindel.com/js/main.js"></script>
+
+    <!-- Vendor JS Files -->
+    <script src="https://www.williambreindel.com/js/jquery.min.js"></script>
+    <script src="https://www.williambreindel.com/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.easing.min.js"></script>
+    <script src="https://www.williambreindel.com/js/validate.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.sticky.js"></script>
+    <script src="https://www.williambreindel.com/js/isotope.pkgd.min.js"></script>
+    <script src="https://www.williambreindel.com/js/venobox.min.js"></script>
+    <script src="https://www.williambreindel.com/js/jquery.waypoints.min.js"></script>
+    <script src="https://www.williambreindel.com/js/owl.carousel.min.js"></script>
+    <script src="https://www.williambreindel.com/js/aos.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="https://www.williambreindel.com/js/main.js"></script>
 
 </body>
 </html>
