--- a/ticketing.html
+++ b/ticketing.html
@@ -54,7 +54,7 @@
     </div>
 
 
-    <div id="sampleWordDiv">
+    <div class="sampleWordDiv">
         <p>
             The Ticketing System is used internally to document and track customer technical and systems issues. When a ticket is entered,
             the priority assigned by the employee will initiate a series of PHP functions to set alerts and automated follow-up reminders..
