--- a/wordpress.html
+++ b/wordpress.html
@@ -51,12 +51,20 @@
 
     <div class="section-title sampleHead">
         <h2><strong>WORDPRESS BUSINESS SITE</strong></h2>
+        <h4><a href="https://www.farmhouseonthepond.com/">https://www.farmhouseonthepond.com/</a></h4>
     </div>
-    <h4><a href="https://www.farmhouseonthepond.com/">https://www.farmhouseonthepond.com/</a></h4>
 
-    <div id="sampleWordDiv">
-        <p>This is a Wordpress site that I built to support my wife’s business. Last year, she began selling baked goods at a farmers market as well as through direct customer orders. </p>
 
+    <div class="sampleWordDiv">
+        <p>
+            This is a Wordpress site that I built to support my wife’s business. Last year, she began selling baked goods at a farmers market as well as through direct customer orders.
+        </p>
+    </div>
+    <div class="samplePicDiv">
+        <img class="samplePics" src="/images/wordpress1.png" alt="Wordpress Pic 1">
+    </div>
+
+    <div class="sampleWordDiv">
         <p>
             The checkout page contains a significant amount of custom Javascript and Jquery, including functionality that checks zip code in order to determine if delivery is available for
             a specific customer location. Additionally, I completely rebuilt a Wordpress add-on to allow the use of two different calendars with separate lookup functionality and settings
@@ -65,7 +73,9 @@
 
     </div>
 
-
+    <div class="samplePicDiv">
+        <img class="samplePics" src="/images/wordpress2.png" alt="Wordpress Pic 1">
+    </div>
 
 
 
