--- a/wordpress.html
+++ b/wordpress.html
@@ -57,7 +57,7 @@
 
     <div class="sampleWordDiv">
         <p>
-            This is a Wordpress site that I built to support my wife’s business. Last year, she began selling baked goods at a farmers market as well as through direct customer orders.
+            This is a Wordpress site that I built to support my wife's business. Last year, she began selling baked goods at a farmers market as well as through direct customer orders.
         </p>
     </div>
     <div class="samplePicDiv">
