--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Portfolio</h2>
-                              <p>Check out some examples of my past work</p>
+                              <p>Check out some examples of my past work.</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading3" class="btn-get-started">Read More</a>
                               </div>
@@ -104,7 +104,7 @@
 
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Skills</h2>
-                              <p>Here are some of the technologies and languages in which i'm fluent.</p>
+                              <p>Here are some of the technologies and languages in which I'm fluent.</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading4" class="btn-get-started">Read More</a>
                               </div>
